Ajout référencement de page ok

--- a/joey-photo/index.html
+++ b/joey-photo/index.html
@@ -1,10 +1,39 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>joey grassy photographie</title>
+    <title>Joey Grassy — Photographe professionnel</title>
+    <meta name="description" content="Joey Grassy — Photographe professionnel spécialisé en portraits, mariages et éditorial. Réservez une séance photo et capturez vos meilleurs moments." />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:site_name" content="Joey Grassy Photographie" />
+    <meta property="og:title" content="Joey Grassy — Photographe professionnel" />
+    <meta property="og:description" content="Photographe professionnel — portraits, mariages, éditorial. Réservez une séance photo." />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Joey Grassy — Photographe professionnel" />
+    <meta name="twitter:description" content="Photographe professionnel — portraits, mariages, éditorial. Réservez une séance photo." />
+
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- JSON-LD minimal (LocalBusiness / Photographer) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Photographer",
+        "name": "Joey Grassy",
+        "url": "https://votre-domaine.exemple/",
+        "telephone": "+33699363143",
+        "description": "Photographe professionnel — portraits, mariages, éditorial.",
+        "@id": "https://votre-domaine.exemple/#photographer"
+      }
+    </script>
+
+    <link rel="canonical" href="https://votre-domaine.exemple/" />
   </head>
   <body>
     <div id="root"></div>
