--- a/joey-photo/index.html
+++ b/joey-photo/index.html
@@ -26,14 +26,14 @@
         "@context": "https://schema.org",
         "@type": "Photographer",
         "name": "Joey Grassy",
-        "url": "https://votre-domaine.exemple/",
+        "url": "https://www.grassyphotographie.fr/",
         "telephone": "+33699363143",
         "description": "Photographe professionnel — portraits, mariages, éditorial.",
-        "@id": "https://votre-domaine.exemple/#photographer"
+        "@id": "https://www.grassyphotographie.fr/#photographer"
       }
     </script>
 
-    <link rel="canonical" href="https://votre-domaine.exemple/" />
+    <link rel="canonical" href="https://www.grassyphotographie.fr/" />
   </head>
   <body>
     <div id="root"></div>
